binrw/tests/ui/named_args_unsupported_tuple_struct.rs
use binrw::BinrwNamedArgs;

#[derive(BinrwNamedArgs)]
struct Tuple(u32, String);

fn main() {}
